# cdp-use

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: lint.yml
cdp_use/: client.py  recorder.py
cdp_use/cdp/: __init__.py  library.py  registration_library.py  registry.py
cdp_use/cdp/accessibility/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/animation/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/applicationcache/: __init__.py  commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/audits/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/autofill/: commands.py  types.py
cdp_use/cdp/browser/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/browseruse/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/cachestorage/: commands.py  library.py  types.py
cdp_use/cdp/console/: library.py
cdp_use/cdp/css/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/database/: __init__.py  commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/debugger/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/deviceorientation/: library.py
cdp_use/cdp/dom/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/domdebugger/: commands.py  library.py  types.py
cdp_use/cdp/domsnapshot/: commands.py  library.py  types.py
cdp_use/cdp/domstorage/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/emulation/: commands.py  events.py  library.py  registration.py  types.py
cdp_use/cdp/heapprofiler/: types.py  (+4 more)
cdp_use/custom_protocols/: browseruse.json
cdp_use/generator/: constants.py  generate.py  generator.py  registration_generator.py  registration_library_generator.py  registry_generator.py
examples/: record.py
tests/: test_recorder.py
(+83 files in other folders)
