[project]
name = "cdp-use"
version = "1.4.5"
description = "Type safe generator/client library for CDP"
authors = [{ name = "Browser Use" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
    "typing-extensions>=4.12.2",
    "websockets>=15.0.1",
]

[project.urls]
Repository = "https://github.com/browser-use/cdp-use"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["build>=1.2.2.post1", "ruff>=0.12.2"]

[tool.hatch.build]
include = ["cdp_use/**/*.py", "cdp_use/py.typed"]
exclude = ["cdp_use/generator/*.py"]

[tool.ruff]
exclude = [".git", "__pycache__", "dist", "build"]

[tool.ruff.lint]
# Ignore wildcard imports (F403) and redefinition (F811) in generated code
ignore = []

[tool.ruff.lint.per-file-ignores]
# Generated CDP code uses wildcard imports by design
"cdp_use/cdp/**/*.py" = ["F403", "F811"]
